--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "browserify": "^14.1.0",
-    "knockout": "^3.4.2"
+    "knockout": "^3.4.2",
+    "knockout.validation": "^2.0.3",
+    "sailplay-hub": "^2.0.26",
+    "sailplay-hub-actions": "^1.0.8"
   },
   "browserify": {
     "transform": [
@@ -14,6 +17,9 @@
         {
           "presets": [
             "es2015"
+          ],
+          "plugins": [
+            "transform-object-rest-spread"
           ]
         }
       ],
@@ -27,13 +33,17 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
+    "babelify": "^7.3.0",
     "browserify-compile-templates": "^0.3.0",
     "budo": "^9.4.7",
+    "knockout-mapping": "^2.6.0",
     "lessify": "^1.0.1"
   },
   "scripts": {
     "start": "budo src/index.js --live",
+    "build": "browserify -o dist/sailplay.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
